--- a/tamara/production/projekatSIMS/View/StartWindowLoggedUser.fxml
+++ b/tamara/production/projekatSIMS/View/StartWindowLoggedUser.fxml
@@ -1,5 +1,6 @@
 <?xml version="1.0" encoding="UTF-8"?>
 
+<?import javafx.scene.paint.*?>
 <?import javafx.scene.image.*?>
 <?import javafx.scene.text.*?>
 <?import java.lang.*?>
@@ -10,41 +11,46 @@
 
 <AnchorPane prefHeight="400.0" prefWidth="600.0" style="-fx-background-color: papayawhip;" xmlns="http://javafx.com/javafx/8" xmlns:fx="http://javafx.com/fxml/1" fx:controller="Controller.StartWindowLogUController">
     <children>
-    <Label layoutX="45.0" layoutY="1.0" prefHeight="52.0" prefWidth="283.0" text="          G L O B U S" textFill="#1e0e14">
-        <font>
-            <Font name="Verdana Bold" size="18.0" />
-        </font></Label>
-        <Button layoutX="391.0" layoutY="14.0" mnemonicParsing="false" onAction="#ChangeProfileButtonPushed" text="Izmena Profila" />
-        <Button layoutX="502.0" layoutY="14.0" mnemonicParsing="false" onAction="#logOutButtonPushed" text="Odjavite se" />
-        <ComboBox layoutX="7.0" layoutY="54.0" onAction="#comboCategoryChanged" prefHeight="25.0" prefWidth="105.0" promptText="Kategorije" />
-        <ComboBox layoutX="127.0" layoutY="54.0" onAction="#comboSortChanged" prefHeight="25.0" prefWidth="105.0" promptText="Sortiraj" />
-        <ComboBox layoutX="248.0" layoutY="54.0" onAction="#comboFilterChanged" prefHeight="25.0" prefWidth="105.0" promptText="Filteri" />
-        <TextField layoutX="373.0" layoutY="55.0" prefHeight="25.0" prefWidth="114.0" />
-        <Button layoutX="487.0" layoutY="55.0" mnemonicParsing="false" onAction="#searchButtonPushed" text="Pretrazi" />
-        <ScrollPane layoutX="10.0" layoutY="130.0" prefHeight="240.0" prefWidth="444.0">
+        <Label layoutX="45.0" layoutY="1.0" prefHeight="52.0" prefWidth="283.0" text="          G L O B U S" textFill="#1e0e14">
+            <font>
+                <Font name="Verdana Bold" size="18.0" />
+            </font></Label>
+        <Button layoutX="416.0" layoutY="14.0" mnemonicParsing="false" onAction="#ChangeProfileButtonPushed" text="Izmena Profila" />
+        <Button layoutX="516.0" layoutY="14.0" mnemonicParsing="false" onAction="#logOutButtonPushed" text="Odjavi se" />
+        <ComboBox fx:id="male" layoutX="6.0" layoutY="84.0" onAction="#comboChanged" prefHeight="25.0" prefWidth="90.0" promptText="Muskarci" />
+        <ComboBox fx:id="sort" layoutX="180.0" layoutY="84.0" onAction="#comboChanged" prefHeight="25.0" prefWidth="84.0" promptText="Sortiraj" />
+        <ComboBox fx:id="color" layoutX="271.0" layoutY="84.0" onAction="#comboChanged" prefHeight="25.0" prefWidth="77.0" promptText="boja" />
+        <TextField fx:id="search" layoutX="384.0" layoutY="56.0" prefHeight="25.0" prefWidth="114.0" />
+        <Button fx:id="searchButton" layoutX="498.0" layoutY="56.0" mnemonicParsing="false" onAction="#searchButtonPushed" text="Pretrazi" />
+        <ScrollPane fx:id="scrollPane" layoutX="29.0" layoutY="116.0" prefHeight="235.0" prefWidth="431.0">
             <content>
-                <AnchorPane minHeight="0.0" minWidth="0.0" prefHeight="246.0" prefWidth="407.0" />
+                <AnchorPane minHeight="0.0" minWidth="0.0" prefHeight="246.0" prefWidth="412.0">
+                    <children>
+                        <VBox fx:id="root" layoutX="15.0" layoutY="14.0" prefHeight="210.0" prefWidth="383.0" />
+                    </children></AnchorPane>
             </content>
         </ScrollPane>
-        <ImageView fitHeight="32.0" fitWidth="37.0" layoutX="554.0" layoutY="51.0" onMouseClicked="#ShopCartClicked" pickOnBounds="true" preserveRatio="true">
+        <ImageView fitHeight="32.0" fitWidth="37.0" layoutX="566.0" layoutY="52.0" onMouseClicked="#ShopCartClicked" pickOnBounds="true" preserveRatio="true">
             <image>
                 <Image url="/icons/cart.png" />
             </image>
         </ImageView>
-        <ImageView fitHeight="76.0" fitWidth="145.0" layoutX="457.0" layoutY="115.0" pickOnBounds="true" preserveRatio="true">
+        <ImageView fitHeight="76.0" fitWidth="145.0" layoutX="487.0" layoutY="110.0" pickOnBounds="true" preserveRatio="true">
             <image>
                 <Image url="/icons/sandro.png" />
             </image>
         </ImageView>
-        <ImageView fitHeight="70.0" fitWidth="145.0" layoutX="457.0" layoutY="200.0" pickOnBounds="true" preserveRatio="true">
+        <ImageView fitHeight="70.0" fitWidth="145.0" layoutX="489.0" layoutY="199.0" pickOnBounds="true" preserveRatio="true">
             <image>
                 <Image url="/icons/tomFord.jpg" />
             </image>
         </ImageView>
-        <ImageView fitHeight="70.0" fitWidth="131.0" layoutX="464.0" layoutY="291.0" pickOnBounds="true" preserveRatio="true">
+        <ImageView fitHeight="70.0" fitWidth="131.0" layoutX="489.0" layoutY="281.0" pickOnBounds="true" preserveRatio="true">
             <image>
                 <Image url="/icons/rimova.jpg" />
             </image>
         </ImageView>
+        <ComboBox fx:id="female" layoutX="103.0" layoutY="84.0" onAction="#comboChanged" prefHeight="25.0" prefWidth="71.0" promptText="Zene" />
+        <ComboBox fx:id="price" layoutX="353.0" layoutY="84.0" onAction="#comboChanged" prefHeight="25.0" prefWidth="107.0" promptText="raspon cene" />
     </children>
 </AnchorPane>
