--- a/tamara/production/projekatSIMS/View/Cart.fxml
+++ b/tamara/production/projekatSIMS/View/Cart.fxml
@@ -1,5 +1,6 @@
 <?xml version="1.0" encoding="UTF-8"?>
 
+<?import javafx.scene.text.*?>
 <?import javafx.scene.media.*?>
 <?import javafx.scene.image.*?>
 <?import java.lang.*?>
@@ -10,19 +11,23 @@
 
 <AnchorPane prefHeight="400.0" prefWidth="600.0" xmlns="http://javafx.com/javafx/8" xmlns:fx="http://javafx.com/fxml/1" fx:controller="Controller.CartController">
    <children>
-      <Label fx:id="tekst" layoutX="25.0" layoutY="94.0" prefHeight="32.0" prefWidth="207.0" />
+      <Label fx:id="tekst" layoutX="25.0" layoutY="94.0" prefHeight="32.0" prefWidth="232.0" text=" " />
       <Label fx:id="cena" layoutX="294.0" layoutY="100.0" text="Cena" />
       <Button layoutX="515.0" layoutY="346.0" mnemonicParsing="false" onAction="#orderButtonPushed" text="Naruči" />
       <ImageView fx:id="slika" fitHeight="68.0" fitWidth="119.0" layoutX="25.0" layoutY="153.0" pickOnBounds="true" preserveRatio="true" />
       <Label fx:id="kolicina" layoutX="462.0" layoutY="100.0" text="Količina" />
       <Button layoutX="32.0" layoutY="34.0" mnemonicParsing="false" onAction="#backButtonPushed" text="Nazad" />
       <ScrollPane fx:id="scrollPane" layoutX="-1.0" layoutY="129.0" prefHeight="182.0" prefWidth="600.0" />
-      <Label fx:id="ukupno" layoutX="384.0" layoutY="314.0" prefHeight="31.0" prefWidth="195.0" />
       <VBox fx:id="root1" layoutX="266.0" layoutY="128.0" prefHeight="182.0" prefWidth="119.0" />
       <VBox fx:id="root2" layoutX="445.0" layoutY="129.0" prefHeight="182.0" prefWidth="130.0" />
       <VBox fx:id="root" layoutX="14.0" layoutY="130.0" prefHeight="182.0" prefWidth="207.0" />
       <Button layoutX="469.0" layoutY="47.0" mnemonicParsing="false" onAction="#izbaciButtonPushed" text="Izbaci iz korpe" />
       <Label layoutX="171.0" layoutY="350.0" text="Ukupno za placanje:" />
       <Label fx:id="ukupnoLabela" layoutX="320.0" layoutY="350.0" prefHeight="17.0" prefWidth="64.0" text="0.00" />
+      <Label fx:id="korpaPraznaLabela" layoutX="118.0" layoutY="34.0" prefHeight="31.0" prefWidth="258.0" text=" " textAlignment="CENTER" textFill="RED">
+         <font>
+            <Font name="Arial Black" size="21.0" />
+         </font>
+      </Label>
    </children>
 </AnchorPane>
